aktualizace playlistů ČRo

--- a/062 ČRo spojení a čištění.ipynb
+++ b/062 ČRo spojení a čištění.ipynb
@@ -175,58 +175,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>476424</th>\n",
-       "      <td>jazz</td>\n",
-       "      <td>2024-12-19T23:53:24+01:00</td>\n",
-       "      <td>21399720.0</td>\n",
-       "      <td>The Three Sounds Featuring Gene Harris</td>\n",
-       "      <td>18434.0</td>\n",
-       "      <td>The Night Has a Thousand Eyes</td>\n",
-       "      <td>60972.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>476425</th>\n",
-       "      <td>radiowave</td>\n",
-       "      <td>2024-12-19T23:55:59+01:00</td>\n",
-       "      <td>21399723.0</td>\n",
-       "      <td>JESSY LANZA</td>\n",
-       "      <td>10188.0</td>\n",
-       "      <td>Lick in Heaven</td>\n",
-       "      <td>77079.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>476426</th>\n",
+       "      <th>633247</th>\n",
        "      <td>radiozurnal</td>\n",
-       "      <td>2024-12-19T23:56:26+01:00</td>\n",
-       "      <td>21399724.0</td>\n",
-       "      <td>CHINASKI</td>\n",
-       "      <td>2987.0</td>\n",
-       "      <td>SLYŠÍM TVOJE KROKY</td>\n",
-       "      <td>118401.0</td>\n",
+       "      <td>2025-05-05T23:56:06+02:00</td>\n",
+       "      <td>22062725.0</td>\n",
+       "      <td>ESPEN LIND</td>\n",
+       "      <td>3300.0</td>\n",
+       "      <td>LUCKY FOR YOU</td>\n",
+       "      <td>8453.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>476427</th>\n",
+       "      <th>633248</th>\n",
        "      <td>dvojka</td>\n",
-       "      <td>2024-12-19T23:58:43+01:00</td>\n",
-       "      <td>21399730.0</td>\n",
+       "      <td>2025-05-05T23:56:36+02:00</td>\n",
+       "      <td>22062728.0</td>\n",
+       "      <td>CHRIS REA</td>\n",
+       "      <td>3058.0</td>\n",
+       "      <td>JULIA</td>\n",
+       "      <td>10065.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633249</th>\n",
+       "      <td>radiowave</td>\n",
+       "      <td>2025-05-05T23:57:05+02:00</td>\n",
+       "      <td>22062730.0</td>\n",
+       "      <td>KAI WHISTON</td>\n",
+       "      <td>17961.0</td>\n",
+       "      <td>Sweet Distraction</td>\n",
+       "      <td>113699.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633250</th>\n",
+       "      <td>jazz</td>\n",
+       "      <td>2025-05-05T23:58:35+02:00</td>\n",
+       "      <td>22062739.0</td>\n",
+       "      <td>AL DI MEOLA</td>\n",
+       "      <td>2472.0</td>\n",
+       "      <td>God Bird Change</td>\n",
+       "      <td>37804.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>633251</th>\n",
+       "      <td>dvojka</td>\n",
+       "      <td>2025-05-05T23:58:41+02:00</td>\n",
+       "      <td>22062740.0</td>\n",
        "      <td>STUDIOVÝ ORCHESTR</td>\n",
        "      <td>4144.0</td>\n",
        "      <td>ČESKÁ STÁTNÍ HYMNA</td>\n",
        "      <td>13826.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>476428</th>\n",
-       "      <td>jazz</td>\n",
-       "      <td>2024-12-19T23:59:19+01:00</td>\n",
-       "      <td>21399732.0</td>\n",
-       "      <td>SNARKY PUPPY</td>\n",
-       "      <td>10404.0</td>\n",
-       "      <td>I Asked</td>\n",
-       "      <td>34372.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>476429 rows × 7 columns</p>\n",
+       "<p>633252 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -237,39 +237,39 @@
        "3         radiowave  2023-10-22T00:07:28+02:00  19376280.0   \n",
        "4              jazz  2023-10-22T00:09:38+02:00  19376283.0   \n",
        "...             ...                        ...         ...   \n",
-       "476424         jazz  2024-12-19T23:53:24+01:00  21399720.0   \n",
-       "476425    radiowave  2024-12-19T23:55:59+01:00  21399723.0   \n",
-       "476426  radiozurnal  2024-12-19T23:56:26+01:00  21399724.0   \n",
-       "476427       dvojka  2024-12-19T23:58:43+01:00  21399730.0   \n",
-       "476428         jazz  2024-12-19T23:59:19+01:00  21399732.0   \n",
+       "633247  radiozurnal  2025-05-05T23:56:06+02:00  22062725.0   \n",
+       "633248       dvojka  2025-05-05T23:56:36+02:00  22062728.0   \n",
+       "633249    radiowave  2025-05-05T23:57:05+02:00  22062730.0   \n",
+       "633250         jazz  2025-05-05T23:58:35+02:00  22062739.0   \n",
+       "633251       dvojka  2025-05-05T23:58:41+02:00  22062740.0   \n",
        "\n",
-       "                                     interpret  interpret_id  \\\n",
-       "0                                  SYLVAN ESSO       11101.0   \n",
-       "1                                   WINONA OAK       25899.0   \n",
-       "2                                     OMRI MOR       15258.0   \n",
-       "3                                         DIIV        2909.0   \n",
-       "4         ALFREDO RODRIGUEZ & PEDRITO MARTINEZ       19128.0   \n",
-       "...                                        ...           ...   \n",
-       "476424  The Three Sounds Featuring Gene Harris       18434.0   \n",
-       "476425                             JESSY LANZA       10188.0   \n",
-       "476426                                CHINASKI        2987.0   \n",
-       "476427                       STUDIOVÝ ORCHESTR        4144.0   \n",
-       "476428                            SNARKY PUPPY       10404.0   \n",
+       "                                   interpret  interpret_id  \\\n",
+       "0                                SYLVAN ESSO       11101.0   \n",
+       "1                                 WINONA OAK       25899.0   \n",
+       "2                                   OMRI MOR       15258.0   \n",
+       "3                                       DIIV        2909.0   \n",
+       "4       ALFREDO RODRIGUEZ & PEDRITO MARTINEZ       19128.0   \n",
+       "...                                      ...           ...   \n",
+       "633247                            ESPEN LIND        3300.0   \n",
+       "633248                             CHRIS REA        3058.0   \n",
+       "633249                           KAI WHISTON       17961.0   \n",
+       "633250                           AL DI MEOLA        2472.0   \n",
+       "633251                     STUDIOVÝ ORCHESTR        4144.0   \n",
        "\n",
-       "                                track  track_id  \n",
-       "0                           Frequency   82943.0  \n",
-       "1                         Winter Rain   87407.0  \n",
-       "2                               Tears   51319.0  \n",
-       "3                           Skin Game   69599.0  \n",
-       "4                    Estamos Llegando   63167.0  \n",
-       "...                               ...       ...  \n",
-       "476424  The Night Has a Thousand Eyes   60972.0  \n",
-       "476425                 Lick in Heaven   77079.0  \n",
-       "476426             SLYŠÍM TVOJE KROKY  118401.0  \n",
-       "476427             ČESKÁ STÁTNÍ HYMNA   13826.0  \n",
-       "476428                        I Asked   34372.0  \n",
+       "                     track  track_id  \n",
+       "0                Frequency   82943.0  \n",
+       "1              Winter Rain   87407.0  \n",
+       "2                    Tears   51319.0  \n",
+       "3                Skin Game   69599.0  \n",
+       "4         Estamos Llegando   63167.0  \n",
+       "...                    ...       ...  \n",
+       "633247       LUCKY FOR YOU    8453.0  \n",
+       "633248               JULIA   10065.0  \n",
+       "633249   Sweet Distraction  113699.0  \n",
+       "633250     God Bird Change   37804.0  \n",
+       "633251  ČESKÁ STÁTNÍ HYMNA   13826.0  \n",
        "\n",
-       "[476429 rows x 7 columns]"
+       "[633252 rows x 7 columns]"
       ]
      },
      "execution_count": 7,
@@ -289,6 +289,147 @@
    "outputs": [],
    "source": [
     "df.to_json(os.path.join(\"data\",\"cro_raw.json\"), orient=\"records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "79b26d1c-7489-480d-b492-7dd02b6967c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b6672c5b-e2f1-4cd1-8c79-c2913e3f578c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['radiowave', 'jazz', 'radiozurnal', 'dvojka', 'pohoda', 'vltava', 'd']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kategorie = df['stanice'].drop_duplicates().to_list()\n",
+    "kategorie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d8d5df5f-27a1-49ad-8a51-f1f768f31d6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pl = pl.from_pandas(df).with_columns(pl.col(\"since\").str.to_datetime()).with_columns(pl.col([\"id\",\"track_id\",\"interpret_id\"]).cast(int).cast(str)).with_columns(pl.col('stanice').cast(pl.Categorical))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a19ab118-7262-47b3-8c4a-f9c291499571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b99c5f21-af3d-4e98-9ecb-927f2e5c9001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pl.write_parquet(os.path.join(\"data\",\"cro.parquet\"), use_pyarrow=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "34d5cc25-0390-4781-a12a-9174eb4f8231",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(633252, 7)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pl.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "c4b86bb8-8cf2-4a27-ae22-b9e87388499f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (28_574, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>stanice</th><th>since</th><th>id</th><th>interpret</th><th>interpret_id</th><th>track</th><th>track_id</th></tr><tr><td>cat</td><td>datetime[μs, UTC]</td><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td></tr></thead><tbody><tr><td>&quot;radiowave&quot;</td><td>2023-10-22 00:01:36 UTC</td><td>&quot;19376508&quot;</td><td>&quot;NATASHA KMETO&quot;</td><td>&quot;9707&quot;</td><td>&quot;Nothing Forever&quot;</td><td>&quot;80655&quot;</td></tr><tr><td>&quot;radiowave&quot;</td><td>2023-10-22 00:04:36 UTC</td><td>&quot;19376514&quot;</td><td>&quot;BONZAI&quot;</td><td>&quot;11252&quot;</td><td>&quot;Cruel&quot;</td><td>&quot;38740&quot;</td></tr><tr><td>&quot;jazz&quot;</td><td>2023-10-22 00:05:08 UTC</td><td>&quot;19376516&quot;</td><td>&quot;ROBBEN FORD&quot;</td><td>&quot;253&quot;</td><td>&quot;Earthquake&quot;</td><td>&quot;259&quot;</td></tr><tr><td>&quot;radiozurnal&quot;</td><td>2023-10-22 00:06:13 UTC</td><td>&quot;19376517&quot;</td><td>&quot;KEANE&quot;</td><td>&quot;2981&quot;</td><td>&quot;CRYSTAL BALL&quot;</td><td>&quot;16945&quot;</td></tr><tr><td>&quot;radiowave&quot;</td><td>2023-10-22 00:07:59 UTC</td><td>&quot;19376523&quot;</td><td>&quot;BARTEES STRANGE&quot;</td><td>&quot;24053&quot;</td><td>&quot;Mustang&quot;</td><td>&quot;81193&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;pohoda&quot;</td><td>2025-05-05 00:56:00 UTC</td><td>&quot;22058207&quot;</td><td>&quot;MILAN CHLADIL&quot;</td><td>&quot;3562&quot;</td><td>&quot;Bylo léto a kvet mák&quot;</td><td>&quot;17868&quot;</td></tr><tr><td>&quot;dvojka&quot;</td><td>2025-05-05 00:57:17 UTC</td><td>&quot;22058211&quot;</td><td>&quot;GEORGE EZRA&quot;</td><td>&quot;8605&quot;</td><td>&quot;Budapest&quot;</td><td>&quot;25918&quot;</td></tr><tr><td>&quot;pohoda&quot;</td><td>2025-05-05 00:57:21 UTC</td><td>&quot;22058212&quot;</td><td>&quot;NAĎA URBÁNKOVÁ&quot;</td><td>&quot;3559&quot;</td><td>&quot;Tobě náležel čas&quot;</td><td>&quot;8963&quot;</td></tr><tr><td>&quot;jazz&quot;</td><td>2025-05-05 00:57:34 UTC</td><td>&quot;22058213&quot;</td><td>&quot;PIERRICK PÉDRON&quot;</td><td>&quot;2556&quot;</td><td>&quot;PP Song Tree&quot;</td><td>&quot;35114&quot;</td></tr><tr><td>&quot;radiowave&quot;</td><td>2025-05-05 00:59:27 UTC</td><td>&quot;22058217&quot;</td><td>&quot;GIRL_IRL &amp; CROSSTALK&quot;</td><td>&quot;34598&quot;</td><td>&quot;Buzz&quot;</td><td>&quot;115795&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (28_574, 7)\n",
+       "┌─────────────┬─────────────────────┬──────────┬─────────────────┬──────────────┬──────────────────────┬──────────┐\n",
+       "│ stanice     ┆ since               ┆ id       ┆ interpret       ┆ interpret_id ┆ track                ┆ track_id │\n",
+       "│ ---         ┆ ---                 ┆ ---      ┆ ---             ┆ ---          ┆ ---                  ┆ ---      │\n",
+       "│ cat         ┆ datetime[μs, UTC]   ┆ str      ┆ str             ┆ str          ┆ str                  ┆ str      │\n",
+       "╞═════════════╪═════════════════════╪══════════╪═════════════════╪══════════════╪══════════════════════╪══════════╡\n",
+       "│ radiowave   ┆ 2023-10-22 00:01:36 ┆ 19376508 ┆ NATASHA KMETO   ┆ 9707         ┆ Nothing Forever      ┆ 80655    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ radiowave   ┆ 2023-10-22 00:04:36 ┆ 19376514 ┆ BONZAI          ┆ 11252        ┆ Cruel                ┆ 38740    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ jazz        ┆ 2023-10-22 00:05:08 ┆ 19376516 ┆ ROBBEN FORD     ┆ 253          ┆ Earthquake           ┆ 259      │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ radiozurnal ┆ 2023-10-22 00:06:13 ┆ 19376517 ┆ KEANE           ┆ 2981         ┆ CRYSTAL BALL         ┆ 16945    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ radiowave   ┆ 2023-10-22 00:07:59 ┆ 19376523 ┆ BARTEES STRANGE ┆ 24053        ┆ Mustang              ┆ 81193    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ …           ┆ …                   ┆ …        ┆ …               ┆ …            ┆ …                    ┆ …        │\n",
+       "│ pohoda      ┆ 2025-05-05 00:56:00 ┆ 22058207 ┆ MILAN CHLADIL   ┆ 3562         ┆ Bylo léto a kvet mák ┆ 17868    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ dvojka      ┆ 2025-05-05 00:57:17 ┆ 22058211 ┆ GEORGE EZRA     ┆ 8605         ┆ Budapest             ┆ 25918    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ pohoda      ┆ 2025-05-05 00:57:21 ┆ 22058212 ┆ NAĎA URBÁNKOVÁ  ┆ 3559         ┆ Tobě náležel čas     ┆ 8963     │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ jazz        ┆ 2025-05-05 00:57:34 ┆ 22058213 ┆ PIERRICK PÉDRON ┆ 2556         ┆ PP Song Tree         ┆ 35114    │\n",
+       "│             ┆ UTC                 ┆          ┆                 ┆              ┆                      ┆          │\n",
+       "│ radiowave   ┆ 2025-05-05 00:59:27 ┆ 22058217 ┆ GIRL_IRL &      ┆ 34598        ┆ Buzz                 ┆ 115795   │\n",
+       "│             ┆ UTC                 ┆          ┆ CROSSTALK       ┆              ┆                      ┆          │\n",
+       "└─────────────┴─────────────────────┴──────────┴─────────────────┴──────────────┴──────────────────────┴──────────┘"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pl.filter(pl.col('since').dt.hour() == 0)"
    ]
   }
  ],
